Avoiding overflow

--- a/src/css/modules/article.css
+++ b/src/css/modules/article.css
@@ -77,6 +77,7 @@
 
   &__content {
     margin: 0 auto;
+    overflow: auto;
 
     @media (--viewport-lg) {
       margin: 0;
@@ -110,7 +111,7 @@
     background-color: var(--color-callout);
     border-left: .4rem solid var(--color-selection);
     border-radius: 0 1rem 1rem 0;
-    margin: 3rem -1rem;
+    margin: 5rem 0 5rem 2rem;
     padding: 2rem;
     position: relative;
 
